# msrpce-dcerpc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
docs/: api-reference.md  authentication.md  high-level-api.md  interfaces.md  protocol-reference.md
examples/: in_memory_bind_call.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bind_ack_decode.rs  rpc_pdu_decode.rs
src/: auth.rs  bind.rs  client.rs  debug.rs  error.rs  lib.rs  ncacn_np.rs  pdu.rs  syntax.rs  transport.rs
tests/: bind_negotiation.rs  call_flow.rs  client_bind.rs  ncacn_np_transport.rs  pdu_wire.rs  phase0_api.rs
